deepcam/cori/src/run_scripts/slurm-2051930.out
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
srun: error: cgpu07: tasks 8-15: Exited with exit code 1
srun: Terminating job step 2051930.0
slurmstepd: error: *** STEP 2051930.0 ON cgpu05 CANCELLED AT 2021-07-02T19:16:27 ***
srun: error: cgpu05: task 0: Terminated
srun: error: cgpu05: task 3: Terminated
srun: error: cgpu18: tasks 24,26,28,30: Terminated
srun: error: cgpu13: task 22: Terminated
srun: error: cgpu13: tasks 16-21: Terminated
srun: error: cgpu18: tasks 25,27,29: Terminated
srun: error: cgpu05: tasks 1-2,4-5,7: Terminated
srun: error: cgpu18: task 31: Terminated
srun: error: cgpu05: task 6: Terminated
srun: error: cgpu13: task 23: Terminated
srun: Force Terminated job step 2051930.0
